Set maximum number of recursive calls for getMemberFunctions to 50.

In some special cases of the curiously recurring template pattern [1],
in my code (OpenFOAM-2.3.x), the C++ plugin will get into an endless
loop and break down finally. This patch prevents it by adding a max
recursion depth of 50 to getMemberFunctions.

[1]: https://en.wikipedia.org/wiki/Curiously_recurring_template_pattern,

REVIEW: 124712
BUG: 351188